[package]
name = "libvmm"
description = "Virtual Machine Monitor"
version = "0.1.0"
authors = ["KarimAllah Ahmed <karim.allah.ahmed@gmail.com>"]
documentation = "https://docs.rs/libvmm"
repository = "https://github.com/libvmm/libvmm"
license = "Apache-2.0"
keywords = [
    "amd64",
    "x86_64",
    "no_std",
    "virtualization",
    "vmm",
]
categories = [
    "no-std",
]
edition = "2018"

[dependencies]
bitflags = "1.0.4"
xargo = "0.3.16"
cargo-xbuild = "0.5.18"
bootloader = { version = "0.6.4", features = ["map_physical_memory"]}
libvmm_macros = { path = "./libvmm_macros", version = "0.1.0" }
